adding nothern parks

--- a/NorthParks.html
+++ b/NorthParks.html
@@ -176,40 +176,44 @@
                                 landscapes of the Ngorongoro region and Lake Natron, go exploring in this region Diversified Tanzania!
                         </p>
                         <div class="d-grid grid-column-3">
-                            <div class="gd-innf" data-aos="fade-up">
-                             <a href="./assets/parks/ArushaPark.html">
+                            <div class="gd-innf" data-aos="fade-up" data-aos-duration="2000">
+                             <a href="./norths/north1.html">
                                 <img class="img-responsive" src="./assets/parks/images/pa1.jpg" alt="image"></a>
                                     <h3>Cultural Safari – Maasai, Hdzabe and Datonga tribes</h3>
                                 <p>
                                 Explore Tanzania with this 14-day itinerary, which takes you to the best places in Tanzania. You will end your trip in
                                 Zanzibar for a well deserved rest!</p>
                             </div>
-                            <div class="gd-innf" data-aos="fade-right">
-                                <a href="./assets/parks/serengetiPark.html">
+                            <div class="gd-innf" data-aos="fade-up"  data-aos-duration="2000">
+                                <a href="./norths/north2.html">
                                     <img class="img-responsive"
-                                        src="assets/parks/images/pa3.jpg" alt="image"></a>
-                                        <h3>10 day VIP Safari – Tarangire, Lake Manyara, ggorongoro and Serengeti
+                                        src="/assets/images/safari-tarangire-troupeau-elephants.jpg" alt="image">
+                                    </a>
+                                        <h3>10 day VIP Safari – Tarangire, Lake Manyara, Ngorongoro and Serengeti
                                       </h3>
                                 <p>Experience the VIP life for 10 days! For this VIP trip, you will enjoy a luxury safari and accomodation at our best
                                 selection of luxurious hotels. You will also be accompanied by a private and experienced guide who will be there to
                                 ensure at best that everything is as per your personal specifications.
                                 </p>
                             </div>
-                            <div class="gd-innf" data-aos="fade-up">
-                                <a href="kilimanjaro.html"><img class="img-responsive" src="assets/parks//images/ba8.jpg"
+                            <div class="gd-innf" data-aos="fade-up" data-aos-duration="2000">
+                                <a href="./norths/north3.html">
+                                    <img class="img-responsive" src="assets/parks//images/pa3.jpg"
                                         alt="image"></a>
                                         <h3>Safari, culture and chillout in Zanzibar
                                     </h3>
                                 <p>
-                                    Blend safari, culture and beach on this two-week itinerary. This experience was designed to give you a well rounded
+                                Blend safari, culture and beach on this two-week itinerary. This experience was designed to give you a well rounded
                                 experience in more than one aspects of the country’s major tourist attractions; ie the Tanzanian culture, Wilderness
                                 Safari and to conclude the experience, a relaxation in Tanzania’s most renowned beaches.</p>
                             </div>
                         </div>
                         <div class="d-grid grid-column-3 second-grids">
                             <div class="gd-innf">
-                                <a href="./assets/parks/ngorongoroPark.html"><img class="img-responsive"
-                                        src="assets/parks/images/ba9.jpg" alt="image"></a>
+                                <a href="./norths/north4.html">
+                                    <img class="img-responsive"
+                                        src="assets/parks/images/ba9.jpg" alt="image">
+                                    </a>
                                  <h3>A safari suitable for families with young children</h3>
                                 <p>
                                 This safari is built specifically to meet the need of group traveling with young children. Long driving are minimized
@@ -218,8 +222,8 @@
                                 They will be able to help them discover Tanzania, with adapted but precise vocabulary.
                                 </p>
                             </div>
-                            <div class="gd-innf" data-aos="fade-bottom">
-                                <a href="./assets/parks/lmanyara.html">
+                            <div class="gd-innf" data-aos="fade-up"  data-aos-duration="2000">
+                                <a href="./norths/north5.html">
                                     <img class="img-responsive" 
                                     src="assets/parks/images/pa2.jpg"
                                         alt="image"></a>
@@ -230,8 +234,9 @@
                                     family friendly accommodation, routes and guides who will give a memorable stay to both children and adults.
                                 </p>
                             </div>
-                            <div class="gd-innf" data-aos="fade-up">
-                                <a href="./assets/parks/tarangirePark.html"><img class="img-responsive"
+                            <div class="gd-innf" data-aos="fade-up"  data-aos-duration="2000">
+                                <a href="./norths/north6.html">
+                                    <img class="img-responsive"
                                         src="assets/parks/images/ba6.jpg" alt="image"></a>
                                 <h3>The best of Tanzania in 7 Days</h3>
                                 <p>
@@ -244,7 +249,9 @@
                         </div>
                             <div class="d-grid grid-column-3 second-grids">
                                 <div class="gd-innf">
-                                    <a href="./assets/parks/ngorongoroPark.html"><img class="img-responsive" src="assets/parks/images/ba9.jpg"
+                                    <a href="./norths/north7.html">
+                                        <img class="img-responsive" 
+                                        src="/assets/images/safari-parc-national-serengeti-leopard.jpg"
                                             alt="image"></a>
                                     <h3>12 days honeymoon safari</h3>
                                     <p>
@@ -263,7 +270,7 @@
             <div class="cal-action-29">
                 <div class="wrapper">
                     <div class="action-main-29 align-center">
-                        <h4 class="cal-action-text-29">
+                        <h4 class="cal-action-text-29" data-aos="fade-up" data-aos-duration="2000">
                             Buy a Tour Safari have a new life Experience
                         </h4>
                         <p>If you are ever looking for a places to stay in your vacation, Kilimangeti Tanzania Safari
