--- a/about.html
+++ b/about.html
@@ -241,14 +241,19 @@
                                 </div>
                                 <div class="content-photo-bot1">
                                     <h5>
-                                    <a href="Tanzania.html"><span class="fa fa-check-circle-o"
-                                                aria-hidden="true"></span>Tanzania Safaris</a></h5>
+                                      <a href="NorthParks.html"><span class="fa fa-check-circle-o" aria-hidden="true"></span>Tanzania Northern Safaris</a>
+                                   </h5>
+                                <h5>
+                                    <a href="SouthParks.html"><span class="fa fa-check-circle-o" aria-hidden="true"></span>Tanzania Southern Safaris</a>
+                                </h5>
                                 </div>
                                 <div class="content-photo-bot1">
                                     <h5><a href="Kenya.html"><span class="fa fa-check-circle-o" aria-hidden="true"></span>Kenya Safaris</a></h5>
                                 </div>
                                 <div class="content-photo-bot1">
-                                    <h5><a href="kilimanjaro.html"><span class="fa fa-check-circle-o" aria-hidden="true"></span>Kilimanjaro Climb Packages</a></h5>
+                                    <h5>
+                                  <a href="kilimanjaro.html"><span class="fa fa-check-circle-o" aria-hidden="true"></span>Kilimanjaro Climb Packages</a>
+                                </h5>
                                 </div>
                             </div>
                         </div>
